--- a/oah-config.yml
+++ b/oah-config.yml
@@ -1,6 +1,6 @@
 ---
 # environment Name
-oah_env_name: oah-bes-vm
+oah_env_name: oah-ci-env
 #GUI Flag
 oah_vm_gui: true
 # `vagrant_box` .
@@ -13,8 +13,8 @@ oah_user: oahdev
 
 # If you need to run multiple instances of Openhack VM, set a unique hostname,
 # machine name, and IP address for each instance.
-vagrant_hostname: oah-bes-vm.dev
-vagrant_machine_name: oah-bes-vm
+vagrant_hostname: oah-ci-env.dev
+vagrant_machine_name: oah-ci-env
 #vagrant_ip: 192.168.88.88
 vagrant_ip: 0.0.0.0
 
