--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -27,4 +27,11 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: echo Hello, world!
+        run: echo testing with setup.py file !
+      - name: setup python
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.8 #install the python needed
+      - name: execute py script # run the run.py to get the latest data
+        run: |
+            python3 setup.py build
