--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -34,4 +34,4 @@ jobs:
           python-version: 3.8 #install the python needed
       - name: execute py script # run the run.py to get the latest data
         run: |
-            python3 setup.py build
+            python3 oah-ci-env/setup.py build
