--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,19 +1,16 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI
+name: Release Action
 
 # Controls when the workflow will run
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
-    branches: [ main ]
+    branches: [ master ]
   pull_request:
-    branches: [ main ]
+    branches: [ master ]
 
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
   build:
@@ -24,15 +21,46 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
-
+      
+      - name: "Set flag from Commit"
+        env:
+          COMMIT_VAR: is_is_test 
+          
+      - run: echo ${COMMIT_VAR}
+    
+#       - name: Setting up tag
+#         run: |
+#           git config --global user.email "joby.ouseph@wipro.com"
+#           git config --global user.name "jobyko"
+#           git tag -a bes-0.1 -m "new tag bes-0.1" &&
+#             git push origin bes-0.1
+          
       # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo testing with setup.py file !
-      - name: setup python
-        uses: actions/setup-python@v2
-        with:
-          python-version: 3.8 #install the python needed
-      - name: execute py script # run the run.py to get the latest data
-        run: |
-            cd ${GITHUB_WORKSPACE}
-            python2 setup.py build
+#       - name: Installing python-setuptools
+#         run: |
+#           sudo apt-get install python-setuptools
+          
+#       - name: setup python
+#         uses: actions/setup-python@v2
+#         with:
+#           python-version: 3.8 #install the python needed
+          
+#       - name: execute python build script # run the run.py to get the latest data
+#         run: |
+#             cd ${GITHUB_WORKSPACE}
+#             python2 setup.py build
+      
+#       - name: ziping httplib2 under dist branch  # run the run.py to get the latest data
+#         run: |
+#             cd build/lib.linux-x86_64-2.7
+#             git fetch && git checkout dist
+#             zip -rj httplib2.zip httplib2
+#             mv httplib2.zip  ../../
+            
+#       - name: Publish the zip file under dist branch
+#         run: |
+#             cd ${GITHUB_WORKSPACE}
+#             git add httplib2.zip && git commit -m "[update] release new version of httplib2.zip"
+#             git push origin dist
+          
+            
